@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" UpgradeCode="{2DE2BA57-E4DA-4F80-BF66-4A9E55476F42}" Version="0.24" Language="1033" Name="jfPasswords" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{2DE2BA57-E4DA-4F80-BF66-4A9E55476F42}" Version="0.25" Language="1033" Name="jfPasswords" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
