@@ -1,3 +1,6 @@
+Aug 29/2023 : jfPasswords/0.25 released
+  - new : added option to include only one upper case, number and symbol
+
 Aug 3/2020 : jfPasswords/0.24 released
   - fix : reset tray icon each time password is entered
     - on Windows switching between screens can change scaling and distort tray icon
